--- a/src/app/components/cart/cart.html
+++ b/src/app/components/cart/cart.html
@@ -1,10 +1,24 @@
-<h2>Your Cart</h2>
+<p *ngIf="cartItems.length === 0">Cart is empty</p>
 
-<p *ngIf="cart.length === 0">Cart is empty</p>
+<div *ngFor="let item of cartItems">
+  <mat-card class="cart-item">
+    <div class="row">
+      <span>{{ item.name }}</span>
+      <span>₹{{ item.price }}</span>
 
-<div *ngFor="let item of cart; let i = index">
-  {{ item.name }} - ₹{{ item.price }}
-  <button (click)="remove(i)">Remove</button>
+      <button
+        mat-icon-button
+        color="warn"
+        (click)="remove(item)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </div>
+  </mat-card>
 </div>
 
-<h3>Total: ₹{{ total() }}</h3>
+<mat-card *ngIf="cartItems.length > 0" class="total-card">
+  <h3>Total: ₹{{ total }}</h3>
+
+  
+  
+</mat-card>
